--- a/src/main/resources/assets/musicblock/lang/pl_pl.json
+++ b/src/main/resources/assets/musicblock/lang/pl_pl.json
@@ -8,5 +8,5 @@
     "msg.unnamed": "Bez Nazwy",
     "msg.outoftime": "Koniec czasu nagrywania ",
     "msg.nowplaying": "Teraz Gra",
-    "msg.by": "Autorstwa"
+    "msg.by": "autorstwa"
 }
